opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: ["Christophe Troestler <Christophe.Troestler@umons.ac.be>"]
tags: ["MOSS"]
license: "ISC"
homepage: "https://github.com/Chris00/ocaml-moss"
dev-repo: "git+https://github.com/Chris00/ocaml-moss.git"
bug-reports: "https://github.com/Chris00/ocaml-moss/issues"
doc: "https://Chris00.github.io/ocaml-moss/doc"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "jbuilder" {build}
  "base-unix"
  "base-bytes"
  "uri"
]
