opam-version: "2.0"
maintainer: "Christophe Troestler <Christophe.Troestler@umons.ac.be>"
authors: ["Christophe Troestler <Christophe.Troestler@umons.ac.be>"]
tags: ["MOSS"]
license: "ISC"
homepage: "https://github.com/Chris00/ocaml-moss"
dev-repo: "git+https://github.com/Chris00/ocaml-moss.git"
bug-reports: "https://github.com/Chris00/ocaml-moss/issues"
doc: "https://Chris00.github.io/ocaml-moss/doc"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml"
  "dune" {build}
  "base-unix"
  "base-bytes"
  "uri"
]
